--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием, создавать Unit-тесты. Также умею работать с Linux-системами и Git. Знаю основы работы с Docker.</p>
 							<p>Владею основами frontend разработки (HTML, CSS, JavaScript, JQuery, SASS/SCSS, Bootstrap, React.js, Redux). Уважаю хорошие UI/UX-решения.</p>
 							<p>Составляю SQL-запросы различного уровня сложности, умею проектировать архитектуру БД.</p>
-							<p>Работаю со следующими СУБД: PostgreSQL, MySQL, MS SQL Server, MongoDB.</p>
-							<p>В качестве сред разработки использую Intellij IDEA, IDLE и WebStorm.</p>
+							<p>Работаю со следующими СУБД: MS SQL Server, PostgreSQL, MongoDB.</p>
+							<p>В качестве сред разработки использую MS Visual Studio, IDLE и WebStorm.</p>
 							<p>Имею профильное высшее образование (направление: фундаментальная информатика и информационные технологии, профиль: инженерия программного обеспечения). Программировать начал ещё учась в средней школе.</p>
 							<p>Английским языком владею на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке. Хорошо работаю в команде.</p>
 						</div>
