--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<div class="section-content">
 							<h2>Профессиональные навыки</h2>
 							<p>Специализируюсь в области разработки на C#/.NET (ASP.NET, ASP.NET MVC, ASP.NET WebAPI, ADO.NET, Entity framework, LINQ, WinForms, WPF, .NET Core), работаю с продуктами Microsoft.</p>
-							<p>Также умею разрабатывать на Python, JavaScript, C++ (Qt), Java, PHP (но из всего вышеперечисленного в последнее время использую только Python и JS).</p>
+							<p>Также умею разрабатывать на Python, JavaScript, C++ (Qt), PHP (но из всего вышеперечисленного в последнее время использую только Python и JS).</p>
 							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием, создавать Unit-тесты. Также умею работать с Linux-системами и Git. Знаю основы работы с Docker.</p>
 							<p>Владею основами frontend разработки (HTML, CSS, JavaScript, JQuery, SASS/SCSS, Bootstrap, React.js, Redux). Уважаю хорошие UI/UX-решения.</p>
 							<p>Составляю SQL-запросы различного уровня сложности, умею проектировать архитектуру БД. Работаю с T-SQL.</p>
