--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 			</article>
 		</div>
 	</div>
+	<a class="scroll-top" href="#"><i class="fa fa-chevron-up"></i></a>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script> //fallback на случай недоступности google cdn
 		window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')
