--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							<p>Владею основами frontend разработки (HTML, CSS, JavaScript, JQuery, SASS/SCSS, Bootstrap, React.js, Redux, Vue.js). Уважаю хорошие UI/UX-решения.</p>
 							<p>Составляю SQL-запросы различного уровня сложности, умею проектировать архитектуру БД. Работаю с T-SQL.</p>
 							<p>Работаю со следующими СУБД: MS SQL Server, PostgreSQL, MySQL, MongoDB.</p>
-							<p>В качестве сред разработки использую MS Visual Studio, RubyMine, WebStorm и IDLE.</p>
+							<p>В качестве сред разработки использую MS Visual Studio, RubyMine, WebStorm и IDLE. Также люблю использовать редактор Visual Studio Code.</p>
 							<p>Имею профильное высшее образование (направление: фундаментальная информатика и информационные технологии, профиль: инженерия программного обеспечения). Программировать начал ещё учась в средней школе.</p>
 							<p>Английским языком владею на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке. Хорошо работаю в команде.</p>
 						</div>
