--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
 					<div class="papers">
 						<div class="section-content">
 							<h2>Профессиональные навыки</h2>
-							<p>Специализируюсь в области разработки на C#/.NET (ASP.NET, ASP.NET MVC, ASP.NET WebAPI, ADO.NET, Entity framework, LINQ, .NET Core, WinForms), работаю с продуктами Microsoft.</p>
-							<p>Также умею разрабатывать на Ruby (Ruby on Rails), Python, PHP, Go, C++, C (но из всего вышеперечисленного в последнее время использую только Ruby (RoR) и Python).</p>
+							<p>Специализируюсь в области разработки на Java (Spring Framework, Hibernate, JPA, JDBC, Java EE, Java SE), backend разработки.</p>
+							<p>Также умею разрабатывать на Python, PHP, Go/Golang, C#/.NET (ASP.NET MVC, ASP.NET Web API, WinForms), C++, C.</p>
 							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием, создавать Unit-тесты. Также умею работать с Linux-системами и Git. Знаю основы работы с Docker.</p>
-							<p>Владею основами frontend разработки (HTML, CSS, JavaScript, JQuery, SASS/SCSS, Bootstrap, React.js, Redux, Vue.js). Уважаю хорошие UI/UX-решения.</p>
-							<p>Составляю SQL-запросы различного уровня сложности, умею проектировать архитектуру БД. Работаю с T-SQL.</p>
-							<p>Работаю со следующими СУБД: MS SQL Server, PostgreSQL, MySQL, MongoDB.</p>
-							<p>В качестве сред разработки использую MS Visual Studio, RubyMine и IDLE. Также люблю использовать редактор Visual Studio Code.</p>
+							<p>Владею основами frontend разработки (HTML, CSS, JavaScript, JQuery, SASS/SCSS, Bootstrap, Vue.js, React.js, Redux). Уважаю хорошие UI/UX-решения.</p>
+							<p>Составляю SQL-запросы различного уровня сложности, умею проектировать архитектуру БД.</p>
+							<p>Работаю со следующими СУБД: PostgreSQL, MS SQL Server, MySQL, MongoDB.</p>
+							<p>В качестве сред разработки использую Intellij IDEA, Eclipse, MS Visual Studio и IDLE. Также люблю использовать редактор Visual Studio Code.</p>
 							<p>Имею профильное высшее образование (направление: фундаментальная информатика и информационные технологии, профиль: инженерия программного обеспечения). Программировать начал ещё учась в средней школе.</p>
 							<p>Английским языком владею на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке. Хорошо работаю в команде.</p>
 						</div>
