--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<p>Составляю SQL-запросы различного уровня сложности, умею проектировать архитектуру БД.</p>
 							<p>Работаю со следующими СУБД: PostgreSQL, MS SQL Server, MySQL, MongoDB.</p>
 							<p>В качестве сред разработки использую Intellij IDEA, Eclipse, MS Visual Studio и IDLE. Также люблю использовать редактор Visual Studio Code.</p>
-							<p>Имею профильное высшее образование (направление: фундаментальная информатика и информационные технологии, профиль: инженерия программного обеспечения). Программировать начал ещё учась в средней школе.</p>
+							<p>Имею профильное высшее образование (направление: фундаментальная информатика и информационные технологии, профиль: инженерия программного обеспечения). Программированием начал заниматься ещё учась в средней школе.</p>
 							<p>Английским языком владею на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке. Хорошо работаю в команде.</p>
 						</div>
 					</div>
