--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<p>Специализируюсь в области разработки на Java (Spring Framework, Hibernate, JPA, JDBC, Java EE, Java SE), backend разработки.</p>
 							<p>Также умею разрабатывать на Python, PHP, Go/Golang, C#/.NET (ASP.NET MVC, ASP.NET Web API, WinForms), C++, C.</p>
 							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием, создавать Unit-тесты. Также умею работать с Linux-системами и Git. Знаю основы работы с Docker.</p>
-							<p>Владею основами frontend разработки (HTML, CSS, JavaScript, JQuery, SASS/SCSS, Bootstrap, Vue.js, React.js, Redux). Уважаю хорошие UI/UX-решения.</p>
+							<p>Владею основами frontend разработки (HTML, CSS, JavaScript, JQuery, Bootstrap, Vue.js, React.js, Redux). Уважаю хорошие UI/UX-решения.</p>
 							<p>Составляю SQL-запросы различного уровня сложности, умею проектировать архитектуру БД.</p>
 							<p>Работаю со следующими СУБД: PostgreSQL, MS SQL Server, MySQL, MongoDB.</p>
 							<p>В качестве сред разработки использую Intellij IDEA, Eclipse, MS Visual Studio и IDLE. Также люблю использовать редактор Visual Studio Code.</p>
