--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="description" content="Страница разработчика">
-	<meta name="keywords" content="Антон Скворцов, А.И. Скворцов, Скворцов Антон Игоревич, Java Developer, Backend Developer, Web Developer, Software Developer, Software Engineer">
+	<meta name="keywords" content="Антон Скворцов, А.И. Скворцов, Скворцов Антон Игоревич, C#/.NET Developer, Backend Developer, Web Developer, Software Developer, Software Engineer">
     <title>Антон Скворцов - Страница разработчика</title>
 	<link href='https://fonts.googleapis.com/css?family=Cuprum:700|PT+Sans:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -17,7 +17,7 @@
 		<div class="main wrapper clearfix">
 			<aside>
 				<div class="sidebar-header">
-					<h2>Антон Скворцов <span>Java разработчик</span><span>Backend разработчик</span></h2>
+					<h2>Антон Скворцов <span>C#/.NET разработчик</span><span>Backend разработчик</span></h2>
 				</div>
 				<nav>
 					<ul>
