--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<img src="img/ProfilePhoto.jpg" alt="" class="img-circle">
 					<h1>Антон Скворцов</h1>
 					<hr>
-					<h3>Java разработчик, Backend разработчик.<br> Живу в Москве. Занимаюсь разработкой на Java (Spring Framework, Hibernate, JPA, JDBC, Java EE, Java SE), backend разработкой. Владею английским языком на достаточно высоком уровне. Имею профильное высшее образование (направление: фундаментальная информатика и информационные технологии, профиль: инженерия программного обеспечения). Люблю осваивать новые технологии и подходы в разработке. Хорошо работаю в команде.</h3>
+					<h3>C#/.NET разработчик, Backend разработчик.<br> Живу в Москве. Занимаюсь разработкой на Java (Spring Framework, Hibernate, JPA, JDBC, Java EE, Java SE), backend разработкой. Владею английским языком на достаточно высоком уровне. Имею профильное высшее образование (направление: фундаментальная информатика и информационные технологии, профиль: инженерия программного обеспечения). Люблю осваивать новые технологии и подходы в разработке. Хорошо работаю в команде.</h3>
 					<hr>
 				</header>
 				<section id="skills">
