--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="description" content="Страница разработчика">
-	<meta name="keywords" content="Антон Скворцов, А.И. Скворцов, Скворцов Антон Игоревич, C#/.NET Developer, Backend Developer, Web Developer, Software Developer, Software Engineer">
+	<meta name="keywords" content="Антон Скворцов, А.И. Скворцов, Скворцов Антон Игоревич, C# разработчик, C#/.NET разработчик, ASP.NET разработчик, Anton Skvortsov, A. Skvortsov, C# Developer, C#/.NET Developer, ASP.NET Developer, Backend Developer, Web Developer, Software Developer, Software Engineer">
     <title>Антон Скворцов - Страница разработчика</title>
 	<link href='https://fonts.googleapis.com/css?family=Cuprum:700|PT+Sans:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -39,14 +39,14 @@
 					<img src="img/ProfilePhoto.jpg" alt="" class="img-circle">
 					<h1>Антон Скворцов</h1>
 					<hr>
-					<h3>C#/.NET разработчик, Backend разработчик.<br> Живу в Москве. Занимаюсь разработкой на C#/.NET (ASP.NET MVC, ASP.NET WebAPI, ADO.NET, Entity framework, LINQ, .NET Core, WCF, WinForms), backend разработкой. Владею английским языком на достаточно высоком уровне. Имею профильное высшее образование (направление: фундаментальная информатика и информационные технологии, профиль: инженерия программного обеспечения). Люблю осваивать новые технологии и подходы в разработке. Хорошо работаю в команде.</h3>
+					<h3>C#/.NET разработчик, Backend разработчик.<br> Живу в Москве. Занимаюсь разработкой на C#/.NET (ASP.NET MVC, ASP.NET WebAPI, ADO.NET, Entity framework, LINQ, .NET Core, WCF, WinForms, WPF), backend разработкой. Владею английским языком на достаточно высоком уровне. Имею профильное высшее образование (направление: фундаментальная информатика и информационные технологии, профиль: инженерия программного обеспечения). Люблю осваивать новые технологии и подходы в разработке. Хорошо работаю в команде.</h3>
 					<hr>
 				</header>
 				<section id="skills">
 					<div class="papers">
 						<div class="section-content">
 							<h2>Профессиональные навыки</h2>
-							<p>Специализируюсь в области разработки на C#/.NET (ASP.NET MVC, ASP.NET WebAPI, ADO.NET, Entity framework, LINQ, .NET Core, WCF, WinForms), backend разработки.</p>
+							<p>Специализируюсь в области разработки на C#/.NET (ASP.NET MVC, ASP.NET WebAPI, ADO.NET, Entity framework, LINQ, .NET Core, WCF, WinForms, WPF), backend разработки.</p>
 							<p>Также умею разрабатывать на JavaScript, Python, PHP, Go, C++, C.</p>
 							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием, создавать Unit-тесты. Также умею работать с Linux-системами и Git. Знаю основы работы с Docker.</p>
 							<p>Владею основами frontend разработки (HTML, CSS, JavaScript, JQuery, Bootstrap, Vue.js, React.js, Redux). Уважаю хорошие UI/UX-решения.</p>
