--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<div class="section-content">
 							<h2>Профессиональные навыки</h2>
 							<p>Специализируюсь в области разработки на C#/.NET (ASP.NET MVC, ASP.NET WebAPI, ADO.NET, Entity framework, LINQ, .NET Core, WCF, WinForms, WPF), backend разработки.</p>
-							<p>Также умею разрабатывать на JavaScript, Python, PHP, Go, C++, C.</p>
+							<p>Также умею разрабатывать на Python/Django, PHP, Go, C++/Qt, C.</p>
 							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием, создавать Unit-тесты. Также умею работать с Linux-системами и Git. Знаю основы работы с Docker.</p>
 							<p>Владею основами frontend разработки (HTML, CSS, JavaScript, JQuery, Bootstrap, Vue.js, React.js, Redux, MobX). Уважаю хорошие UI/UX-решения.</p>
 							<p>Составляю SQL-запросы различного уровня сложности, умею проектировать архитектуру БД.</p>
