--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 						<div class="section-content">
 							<h2>Профессиональные навыки</h2>
 							<p>Специализируюсь в области разработки на C#/.NET (ASP.NET MVC, ASP.NET WebAPI, ADO.NET, Entity framework, LINQ, ASP.NET Core, WinForms, WPF), web разработки.</p>
-							<p>Также умею разрабатывать на Python/Django, PHP, Go, C++/Qt, C.</p>
+							<p>Также умею разрабатывать на JavaScript, Python, PHP, C++/Qt, C.</p>
 							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием, создавать Unit-тесты. Также умею работать с Linux-системами и Git. Знаю основы работы с Docker.</p>
 							<p>Владею основами frontend разработки (HTML, CSS, JavaScript, JQuery, Bootstrap, Vue.js, React.js, Redux, MobX). Уважаю хорошие UI/UX-решения.</p>
 							<p>Составляю SQL-запросы различного уровня сложности, умею проектировать архитектуру БД.</p>
-							<p>Работаю со следующими СУБД: MS SQL Server, PostgreSQL, MySQL, MongoDB.</p>
+							<p>Работаю со следующими СУБД: MS SQL Server, PostgreSQL, MongoDB.</p>
 							<p>В качестве сред разработки использую MS Visual Studio и IDLE. Также люблю использовать редактор Visual Studio Code.</p>
 							<p>Имею профильное высшее образование (направление: фундаментальная информатика и информационные технологии, профиль: инженерия программного обеспечения). Программированием начал заниматься ещё учась в средней школе.</p>
 							<p>Английским языком владею на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке. Хорошо работаю в команде.</p>
