--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<p>Специализируюсь в области разработки на C#/.NET (ASP.NET MVC, ASP.NET WebAPI, ADO.NET, Entity framework, LINQ, ASP.NET Core, WinForms, WPF), web разработки.</p>
 							<p>В разное время программировал на JavaScript, Python, PHP, C++/Qt, C, MATLAB.</p>
 							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием. Также умею работать с Linux-системами и Git. Знаю основы работы с Docker.</p>
-							<p>Владею основами frontend разработки (HTML, CSS, JavaScript, JQuery, Bootstrap, Vue.js, React.js, Redux, MobX). Уважаю хорошие UI/UX-решения.</p>
+							<p>Владею основами frontend разработки (HTML, CSS, JavaScript, JQuery, Bootstrap, React.js). Уважаю хорошие UI/UX-решения.</p>
 							<p>Составляю SQL-запросы различного уровня сложности, умею проектировать архитектуру БД.</p>
 							<p>Работаю со следующими СУБД: MS SQL Server, PostgreSQL, MySQL.</p>
 							<p>В качестве сред разработки использую MS Visual Studio и IDLE. Также люблю использовать редактор Visual Studio Code.</p>
