Upload some changes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				</nav>
 				<div class="sidebar-soc">
 					<ul>
-						<li><a href="mailto:antonskvortsov.1996@gmail.com"><i class="fa fa-envelope"></i></a></li>
+						<li><a href="mailto:anton.skvortsov.1996@yandex.ru"><i class="fa fa-envelope"></i></a></li>
 						<li><a href="https://vk.com/anton_skvortsov10" target="_blank"><i class="fa fa-vk"></i></a></li>
 						<li><a href="https://github.com/antonskvortsov10" target="_blank"><i class="fa fa-github"></i></a></li>
 					</ul>
@@ -63,11 +63,11 @@
 						<div class="section-content">
 							<h2>Проекты</h2>
 							<!-- Исходный код проектов размещён на моём GitHub -->
-							<div class="projects-timeline">
-								<div class="projects-timeline-item">
-									<div class="projects-timeline-item-head"><i class="fa fa-lightbulb-o"></i></div>
-									<div class="projects-timeline-item-headtext">
-										<div class="projects-timeline-item-arrow"><i></i></div>
+							<div class="timeline">
+								<div class="timeline-item">
+									<div class="timeline-item-head"><i class="fa fa-lightbulb-o"></i></div>
+									<div class="timeline-item-headtext">
+										<div class="timeline-item-arrow"><i></i></div>
 										<h3>Список проектов</h3>
 									</div>
 								</div>
@@ -82,7 +82,7 @@
 							<div class="contact-list">
 								<ul class="fa-ul contact-list-first-col">
 									<li><i class="fa-li fa fa-envelope"></i>
-										<p>E-mail: <a href="mailto:antonskvortsov.1996@gmail.com">antonskvortsov.1996@gmail.com</a></p>
+										<p>E-mail: <a href="mailto:anton.skvortsov.1996@yandex.ru">anton.skvortsov.1996@yandex.ru</a></p>
 									</li>
 									<li><i class="fa-li fa fa-vk"></i>
 										<p>ВКонтакте: <a href="https://vk.com/anton_skvortsov10" target="_blank">vk.com/anton_skvortsov10</a></p>
