Upload new changes

--- a/index.html
+++ b/index.html
@@ -71,6 +71,39 @@
 										<h3>Список проектов</h3>
 									</div>
 								</div>
+								<div class="timeline-item">
+									<div class="timeline-item-date">осень&nbsp;2015&nbsp;- весна &nbsp;2016</div>
+                                    <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
+                                    <div class="timeline-item-content">
+										<div class="timeline-item-arrow"><i></i></div>
+										<h3>Транслятор языка MiniC</h3>
+										<div class="timeline-item-content-spoiler" style="display: none;">
+											<p><a href="https://github.com/antonskvortsov10/MiniC-translator">Репозиторий с исходным кодом</a></p>
+											<h3>Цель: разработка транслятора ЯП MiniC</h3>
+											<p>Используемые языки и библиотеки:</p>
+                                            <ul class="fa-ul">
+												<li><i class="fa-li fa fa-check"></i>C++</li>
+												<li><i class="fa-li fa fa-check"></i>STL</li>
+                                            </ul>
+										</div>
+									</div>
+								</div>
+								<div class="timeline-item">
+									<div class="timeline-item-date">лето&nbsp;2015</div>
+                                    <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
+                                    <div class="timeline-item-content">
+										<div class="timeline-item-arrow"><i></i></div>
+										<h3>Эмулятор процессора I8080</h3>
+										<div class="timeline-item-content-spoiler" style="display: none;">
+											<p><a href="https://github.com/antonskvortsov10/Intel-8080-Emulator">Репозиторий с исходным кодом</a></p>
+											<h3>Цель: разработка эмулятора процессора Intel 8080</h3>
+											<p>Используемые языки и библиотеки:</p>
+                                            <ul class="fa-ul">
+                                                <li><i class="fa-li fa fa-check"></i>Python</li>
+                                            </ul>
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
