--- a/index.html
+++ b/index.html
@@ -72,14 +72,161 @@
 									</div>
 								</div>
 								<div class="timeline-item">
-									<div class="timeline-item-date">осень&nbsp;2015&nbsp;- весна &nbsp;2016</div>
+									<div class="timeline-item-date">весна&nbsp;2020&nbsp;- лето&nbsp;2020</div>
+                                    <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
+                                    <div class="timeline-item-content">
+										<div class="timeline-item-arrow"><i></i></div>
+										<h3>Vidly</h3>
+										<div class="timeline-item-content-spoiler" style="display: none;">
+											<p><a href="https://github.com/antonskvortsov10/Vidly">Репозиторий с исходным кодом</a></p>
+											<h3>Цель: создание веб-приложения для системы кинопроката.</h3>
+											<p>Используемые языки и библиотеки:</p>
+                                            <ul class="fa-ul">
+                                                <li><i class="fa-li fa fa-check"></i>C#</li>
+												<li><i class="fa-li fa fa-check"></i>.NET Framework</li>
+												<li><i class="fa-li fa fa-check"></i>ASP.NET MVC 5</li>
+												<li><i class="fa-li fa fa-check"></i>ASP.NET Web API</li>
+												<li><i class="fa-li fa fa-check"></i>Ajax</li>
+												<li><i class="fa-li fa fa-check"></i>JQuery</li>
+												<li><i class="fa-li fa fa-check"></i>Bootstrap</li>
+												<li><i class="fa-li fa fa-check"></i>Razor</li>
+                                            </ul>
+										</div>
+									</div>
+								</div>
+								<div class="timeline-item">
+									<div class="timeline-item-date">осень&nbsp;2019</div>
+                                    <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
+                                    <div class="timeline-item-content">
+										<div class="timeline-item-arrow"><i></i></div>
+										<h3>Приложение для парсинга курсов валют</h3>
+										<div class="timeline-item-content-spoiler" style="display: none;">
+											<p><a href="https://github.com/antonskvortsov10/CurrencyParser">Репозиторий с исходным кодом</a></p>
+											<h3>Цель: создание кроссплатформенного приложения для парсинга курсов валют (по курсу ЦБ).</h3>
+											<p>Используемые языки и библиотеки:</p>
+                                            <ul class="fa-ul">
+                                                <li><i class="fa-li fa fa-check"></i>Java</li>
+                                            </ul>
+										</div>
+									</div>
+								</div>
+								<div class="timeline-item">
+									<div class="timeline-item-date">осень&nbsp;2019</div>
+                                    <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
+                                    <div class="timeline-item-content">
+										<div class="timeline-item-arrow"><i></i></div>
+										<h3>Приложение с компьютерной графикой</h3>
+										<div class="timeline-item-content-spoiler" style="display: none;">
+											<p><a href="https://github.com/antonskvortsov10/Graphics-app">Репозиторий с исходным кодом</a></p>
+											<h3>Цель: создание приложения, реализующего поставленную задачу по компьютерной графике
+												(выполнение лабораторной работы на заказ).</h3>
+											<p>Используемые языки и библиотеки:</p>
+                                            <ul class="fa-ul">
+												<li><i class="fa-li fa fa-check"></i>C#</li>
+                                                <li><i class="fa-li fa fa-check"></i>.NET Framework</li>
+                                                <li><i class="fa-li fa fa-check"></i>WinForms</li>
+                                            </ul>
+										</div>
+									</div>
+								</div>
+								<div class="timeline-item">
+									<div class="timeline-item-date">осень&nbsp;2017</div>
+                                    <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
+                                    <div class="timeline-item-content">
+										<div class="timeline-item-arrow"><i></i></div>
+										<h3>Клиент-сервер</h3>
+										<div class="timeline-item-content-spoiler" style="display: none;">
+											<p><a href="https://github.com/antonskvortsov10/Client-and-Server">Репозиторий с исходным кодом</a></p>
+											<h3>Цель: создание сокетных клиентов и серверов (с использованием TCP и UDP).</h3>
+											<p>Используемые языки и библиотеки:</p>
+                                            <ul class="fa-ul">
+                                                <li><i class="fa-li fa fa-check"></i>C#</li>
+                                                <li><i class="fa-li fa fa-check"></i>.NET Framework</li>
+                                            </ul>
+										</div>
+									</div>
+								</div>
+								<div class="timeline-item">
+									<div class="timeline-item-date">осень&nbsp;2017</div>
+                                    <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
+                                    <div class="timeline-item-content">
+										<div class="timeline-item-arrow"><i></i></div>
+										<h3>База данных городов</h3>
+										<div class="timeline-item-content-spoiler" style="display: none;">
+											<p><a href="https://github.com/antonskvortsov10/City-Database">Репозиторий с исходным кодом</a></p>
+											<h3>Цель: проектирование базы данных городов и создание консольного интерфейса для взаимодействия с ней.</h3>
+											<p>Используемые языки и библиотеки:</p>
+                                            <ul class="fa-ul">
+                                                <li><i class="fa-li fa fa-check"></i>PostgreSQL</li>
+												<li><i class="fa-li fa fa-check"></i>ECPG</li>
+												<li><i class="fa-li fa fa-check"></i>C</li>
+                                                <li><i class="fa-li fa fa-check"></i>C++</li>
+                                            </ul>
+										</div>
+									</div>
+								</div>
+								<div class="timeline-item">
+									<div class="timeline-item-date">осень&nbsp;2016</div>
+                                    <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
+                                    <div class="timeline-item-content">
+										<div class="timeline-item-arrow"><i></i></div>
+										<h3>K-means clustering</h3>
+										<div class="timeline-item-content-spoiler" style="display: none;">
+											<p><a href="https://github.com/antonskvortsov10/K-means">Репозиторий с исходным кодом</a></p>
+											<h3>Цель: разработка десктопного приложения с реализацией метода кластеризации k-means для обработки изображений.</h3>
+											<p>Используемые языки и библиотеки:</p>
+                                            <ul class="fa-ul">
+                                                <li><i class="fa-li fa fa-check"></i>C#</li>
+                                                <li><i class="fa-li fa fa-check"></i>.NET Framework</li>
+                                                <li><i class="fa-li fa fa-check"></i>WinForms</li>
+                                            </ul>
+										</div>
+									</div>
+								</div>
+								<div class="timeline-item">
+									<div class="timeline-item-date">осень&nbsp;2016</div>
+                                    <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
+                                    <div class="timeline-item-content">
+										<div class="timeline-item-arrow"><i></i></div>
+										<h3>Приложение для обработки изображений</h3>
+										<div class="timeline-item-content-spoiler" style="display: none;">
+											<p><a href="https://github.com/antonskvortsov10/Image-processing">Репозиторий с исходным кодом</a></p>
+											<h3>Цель: разработка десктопного приложения для обработки изображений.</h3>
+											<p>Используемые языки и библиотеки:</p>
+                                            <ul class="fa-ul">
+                                                <li><i class="fa-li fa fa-check"></i>C#</li>
+                                                <li><i class="fa-li fa fa-check"></i>.NET Framework</li>
+                                                <li><i class="fa-li fa fa-check"></i>WinForms</li>
+                                            </ul>
+										</div>
+									</div>
+								</div>
+								<div class="timeline-item">
+									<div class="timeline-item-date">лето&nbsp;2016</div>
+                                    <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
+                                    <div class="timeline-item-content">
+										<div class="timeline-item-arrow"><i></i></div>
+										<h3>Adventure game</h3>
+										<div class="timeline-item-content-spoiler" style="display: none;">
+											<p><a href="https://github.com/antonskvortsov10/Adventure-game">Репозиторий с исходным кодом</a></p>
+											<h3>Цель: разработка игры в жанре adventure с помощью фреймворка Qt.</h3>
+											<p>Используемые языки и библиотеки:</p>
+                                            <ul class="fa-ul">
+                                                <li><i class="fa-li fa fa-check"></i>Qt</li>
+                                                <li><i class="fa-li fa fa-check"></i>C++</li>
+                                            </ul>
+										</div>
+									</div>
+								</div>
+								<div class="timeline-item">
+									<div class="timeline-item-date">осень&nbsp;2015&nbsp;- весна&nbsp;2016</div>
                                     <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
                                     <div class="timeline-item-content">
 										<div class="timeline-item-arrow"><i></i></div>
 										<h3>Транслятор языка MiniC</h3>
 										<div class="timeline-item-content-spoiler" style="display: none;">
 											<p><a href="https://github.com/antonskvortsov10/MiniC-translator">Репозиторий с исходным кодом</a></p>
-											<h3>Цель: разработка транслятора ЯП MiniC</h3>
+											<h3>Цель: разработка транслятора ЯП MiniC.</h3>
 											<p>Используемые языки и библиотеки:</p>
                                             <ul class="fa-ul">
 												<li><i class="fa-li fa fa-check"></i>C++</li>
@@ -96,7 +243,7 @@
 										<h3>Эмулятор процессора I8080</h3>
 										<div class="timeline-item-content-spoiler" style="display: none;">
 											<p><a href="https://github.com/antonskvortsov10/Intel-8080-Emulator">Репозиторий с исходным кодом</a></p>
-											<h3>Цель: разработка эмулятора процессора Intel 8080</h3>
+											<h3>Цель: разработка эмулятора процессора Intel 8080.</h3>
 											<p>Используемые языки и библиотеки:</p>
                                             <ul class="fa-ul">
                                                 <li><i class="fa-li fa fa-check"></i>Python</li>
