--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<img src="img/ProfilePhoto.jpg" alt="" class="img-circle">
 					<h1>Антон Скворцов</h1>
 					<hr>
-					<h3>C#/.NET разработчик, Backend разработчик.<br> Живу в Москве. Занимаюсь разработкой на C#/.NET (ASP.NET MVC, ASP.NET WebAPI, ADO.NET, Entity framework, LINQ, ASP.NET Core, WinForms, WPF), backend разработкой. Владею английским языком на достаточно высоком уровне. Имею профильное высшее образование (направление: фундаментальная информатика и информационные технологии, профиль: инженерия программного обеспечения). Люблю осваивать новые технологии и подходы в разработке. Хорошо работаю в команде.</h3>
+					<h3>C#/.NET разработчик, Backend разработчик.<br> Живу в Москве. Занимаюсь разработкой на C#/.NET (ASP.NET MVC, ASP.NET WebAPI, ADO.NET, Entity framework, LINQ, ASP.NET Core, WinForms, WPF), backend разработкой. Владею английским языком на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке. Хорошо работаю в команде.</h3>
 					<hr>
 				</header>
 				<section id="skills">
@@ -47,7 +47,7 @@
 						<div class="section-content">
 							<h2>Профессиональные навыки</h2>
 							<p>Специализируюсь в области разработки на C#/.NET (ASP.NET MVC, ASP.NET WebAPI, ADO.NET, Entity framework, LINQ, ASP.NET Core, WinForms, WPF), web разработки.</p>
-							<p>В разное время программировал на JavaScript, Python, PHP, C++/Qt, C, MATLAB.</p>
+							<p>В разное время программировал на JavaScript, Python, Java, C++/Qt, C, MATLAB.</p>
 							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием. Также умею работать с Linux-системами и Git. Знаю основы работы с Docker.</p>
 							<p>Владею основами frontend разработки (HTML, CSS, JavaScript, JQuery, Bootstrap, React.js). Уважаю хорошие UI/UX-решения.</p>
 							<p>Составляю SQL-запросы различного уровня сложности, умею проектировать архитектуру БД.</p>
@@ -55,6 +55,7 @@
 							<p>В качестве сред разработки использую MS Visual Studio и IDLE. Также люблю использовать редактор Visual Studio Code.</p>
 							<p>Имею профильное высшее образование (направление: фундаментальная информатика и информационные технологии, профиль: инженерия программного обеспечения). Программированием начал заниматься ещё учась в средней школе.</p>
 							<p>Английским языком владею на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке. Хорошо работаю в команде.</p>
+							<p>С некоторыми моими проектами Вы можете ознакомиться ниже.</p>
 						</div>
 					</div>
 				</section>
@@ -80,17 +81,20 @@
 										<div class="timeline-item-content-spoiler" style="display: none;">
 											<p><a href="https://github.com/antonskvortsov10/Vidly">Репозиторий с исходным кодом</a></p>
 											<h3>Цель: создание веб-приложения для системы кинопроката.</h3>
-											<p>Используемые языки и библиотеки:</p>
+											<p>Используемые языки, фреймворки и технологии:</p>
                                             <ul class="fa-ul">
                                                 <li><i class="fa-li fa fa-check"></i>C#</li>
 												<li><i class="fa-li fa fa-check"></i>.NET Framework</li>
-												<li><i class="fa-li fa fa-check"></i>ASP.NET MVC 5</li>
+												<li><i class="fa-li fa fa-check"></i>ASP.NET MVC</li>
 												<li><i class="fa-li fa fa-check"></i>ASP.NET Web API</li>
+												<li><i class="fa-li fa fa-check"></i>Entity framework</li>
+												<li><i class="fa-li fa fa-check"></i>LINQ</li>
+												<li><i class="fa-li fa fa-check"></i>MS SQL</li>
 												<li><i class="fa-li fa fa-check"></i>Ajax</li>
 												<li><i class="fa-li fa fa-check"></i>JQuery</li>
 												<li><i class="fa-li fa fa-check"></i>Bootstrap</li>
 												<li><i class="fa-li fa fa-check"></i>Razor</li>
-                                            </ul>
+											</ul>
 										</div>
 									</div>
 								</div>
