--- a/index.html
+++ b/index.html
@@ -103,6 +103,24 @@
                                     <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
                                     <div class="timeline-item-content">
 										<div class="timeline-item-arrow"><i></i></div>
+										<h3>Dashboard</h3>
+										<div class="timeline-item-content-spoiler" style="display: none;">
+											<p><a href="https://github.com/antonskvortsov10/Dashboard">Репозиторий с исходным кодом</a></p>
+											<h3>Цель: разработка дизайна и реализация панели управления.</h3>
+											<p>Используемые языки и библиотеки:</p>
+                                            <ul class="fa-ul">
+												<li><i class="fa-li fa fa-check"></i>C#</li>
+                                                <li><i class="fa-li fa fa-check"></i>.NET Framework</li>
+                                                <li><i class="fa-li fa fa-check"></i>WinForms</li>
+                                            </ul>
+										</div>
+									</div>
+								</div>
+								<div class="timeline-item">
+									<div class="timeline-item-date">осень&nbsp;2019</div>
+                                    <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
+                                    <div class="timeline-item-content">
+										<div class="timeline-item-arrow"><i></i></div>
 										<h3>Приложение для парсинга курсов валют</h3>
 										<div class="timeline-item-content-spoiler" style="display: none;">
 											<p><a href="https://github.com/antonskvortsov10/CurrencyParser">Репозиторий с исходным кодом</a></p>
