--- a/index.html
+++ b/index.html
@@ -99,6 +99,45 @@
 									</div>
 								</div>
 								<div class="timeline-item">
+									<div class="timeline-item-date">весна&nbsp;2020</div>
+                                    <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
+                                    <div class="timeline-item-content">
+										<div class="timeline-item-arrow"><i></i></div>
+										<h3>CRM</h3>
+										<div class="timeline-item-content-spoiler" style="display: none;">
+											<p><a href="https://github.com/antonskvortsov10/ShopCRM">Репозиторий с исходным кодом</a></p>
+											<h3>Цель: разработка CRM-системы для магазина.</h3>
+											<p>Используемые языки и библиотеки:</p>
+                                            <ul class="fa-ul">
+												<li><i class="fa-li fa fa-check"></i>C#</li>
+                                                <li><i class="fa-li fa fa-check"></i>.NET Framework</li>
+                                                <li><i class="fa-li fa fa-check"></i>WinForms</li>
+                                                <li><i class="fa-li fa fa-check"></i>MS SQL</li>
+                                            </ul>
+										</div>
+									</div>
+								</div>
+								<div class="timeline-item">
+									<div class="timeline-item-date">весна&nbsp;2020</div>
+                                    <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
+                                    <div class="timeline-item-content">
+										<div class="timeline-item-arrow"><i></i></div>
+										<h3>Система электронного документооборота</h3>
+										<div class="timeline-item-content-spoiler" style="display: none;">
+											<p><a href="https://github.com/antonskvortsov10/EDMS">Репозиторий с исходным кодом</a></p>
+											<h3>Цель: разработка системы электронного документооборота.</h3>
+											<p>Используемые языки и библиотеки:</p>
+                                            <ul class="fa-ul">
+												<li><i class="fa-li fa fa-check"></i>C#</li>
+                                                <li><i class="fa-li fa fa-check"></i>.NET Framework</li>
+                                                <li><i class="fa-li fa fa-check"></i>WinForms</li>
+                                                <li><i class="fa-li fa fa-check"></i>ADO.NET</li>
+                                                <li><i class="fa-li fa fa-check"></i>MS SQL</li>
+                                            </ul>
+										</div>
+									</div>
+								</div>
+								<div class="timeline-item">
 									<div class="timeline-item-date">осень&nbsp;2019</div>
                                     <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
                                     <div class="timeline-item-content">
