--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="description" content="Страница разработчика">
-	<meta name="keywords" content="Антон Скворцов, А.И. Скворцов, Скворцов Антон Игоревич, C# разработчик, C#/.NET разработчик, ASP.NET разработчик, Backend разработчик, Anton Skvortsov, A. Skvortsov, C# Developer, C#/.NET Developer, ASP.NET Developer, Backend Developer, Software Developer, Software Engineer">
+	<meta name="keywords" content="Антон Скворцов, А.И. Скворцов, Скворцов Антон Игоревич, C# разработчик, C#/.NET разработчик, ASP.NET разработчик, Backend разработчик, Web разработчик, Anton Skvortsov, A. Skvortsov, C# Developer, C#/.NET Developer, ASP.NET Developer, Backend Developer, Web Developer, Software Developer, Software Engineer">
     <title>Антон Скворцов - Страница разработчика</title>
 	<link href='https://fonts.googleapis.com/css?family=Cuprum:700|PT+Sans:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
