--- a/index.html
+++ b/index.html
@@ -39,21 +39,21 @@
 					<img src="img/ProfilePhoto.jpg" alt="" class="img-circle">
 					<h1>Антон Скворцов</h1>
 					<hr>
-					<h3>C#/.NET разработчик, Backend разработчик.<br> Живу в Москве. Занимаюсь разработкой на C#/.NET (ASP.NET MVC, ASP.NET WebAPI, ADO.NET, Entity framework, LINQ, ASP.NET Core, WinForms, WPF), backend разработкой. Владею английским языком на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке. Хорошо работаю в команде.</h3>
+					<h3>C#/.NET разработчик, Backend разработчик.<br> Живу в Москве. Занимаюсь разработкой на C#/.NET (ASP.NET MVC, ASP.NET WebAPI, ADO.NET, Entity framework CF, LINQ, ASP.NET Core, WinForms), backend разработкой. Владею английским языком на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке. Хорошо работаю в команде.</h3>
 					<hr>
 				</header>
 				<section id="skills">
 					<div class="papers">
 						<div class="section-content">
 							<h2>Профессиональные навыки</h2>
-							<p>Специализируюсь в области разработки на C#/.NET (ASP.NET MVC, ASP.NET WebAPI, ADO.NET, Entity framework, LINQ, ASP.NET Core, WinForms, WPF), web разработки.</p>
-							<p>В разное время программировал на JavaScript, Python, Java, C++/Qt, C, MATLAB.</p>
-							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием. Также умею работать с Linux-системами и Git. Знаю основы работы с Docker.</p>
-							<p>Владею основами frontend разработки (HTML, CSS, JavaScript, JQuery, Bootstrap, React.js). Уважаю хорошие UI/UX-решения.</p>
+							<p>Специализируюсь в области разработки на C#/.NET (ASP.NET MVC, ASP.NET WebAPI, ADO.NET, Entity framework CF, LINQ, ASP.NET Core, WinForms), web разработки.</p>
+							<p>В разное время программировал на JavaScript, Python, C++/Qt, C, MATLAB.</p>
+							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием. Также умею работать с Git, знаю основы работы с Docker.</p>
+							<p>Владею основами frontend разработки (HTML, CSS, JavaScript, JQuery, Bootstrap, Less, Webpack, React.js, Redux). Уважаю хорошие UI/UX-решения.</p>
 							<p>Составляю SQL-запросы различного уровня сложности, умею проектировать архитектуру БД.</p>
-							<p>Работаю со следующими СУБД: MS SQL Server, PostgreSQL, MySQL.</p>
+							<p>Работаю со следующими СУБД: MS SQL Server, PostgreSQL, MongoDB.</p>
 							<p>В качестве сред разработки использую MS Visual Studio и IDLE. Также люблю использовать редактор Visual Studio Code.</p>
-							<p>Имею профильное высшее образование (направление: фундаментальная информатика и информационные технологии, профиль: инженерия программного обеспечения). Программированием начал заниматься ещё учась в средней школе.</p>
+							<p>Выпускник МГУ им. М.В. Ломоносова (механико-математический факультет), имею степень магистра в области фундаментальной математики (специализация: геометрия и топология). Также имею степень бакалавра по профильному направлению подготовки (направление: фундаментальная информатика и информационные технологии, профиль: инженерия программного обеспечения). Программированием начал заниматься ещё учась в средней школе.</p>
 							<p>Английским языком владею на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке. Хорошо работаю в команде.</p>
 							<p>С некоторыми моими проектами Вы можете ознакомиться ниже.</p>
 						</div>
