--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<p>Составляю SQL-запросы различного уровня сложности, умею проектировать архитектуру БД.</p>
 							<p>Работаю со следующими СУБД: MS SQL Server, PostgreSQL, MongoDB.</p>
 							<p>В качестве сред разработки использую MS Visual Studio и IDLE. Также люблю использовать редактор Visual Studio Code.</p>
-							<p>Выпускник МГУ им. М.В. Ломоносова (механико-математический факультет), имею степень магистра в области фундаментальной математики (специализация: геометрия и топология). Также имею степень бакалавра по профильному направлению подготовки (направление: фундаментальная информатика и информационные технологии, профиль: инженерия программного обеспечения). Программированием начал заниматься ещё учась в средней школе.</p>
+							<p>Выпускник МГУ им. М.В. Ломоносова (механико-математический факультет). Имею степень магистра в области фундаментальной математики (специализация: геометрия и топология). Также имею степень бакалавра по профильному направлению подготовки (направление: фундаментальная информатика и информационные технологии, профиль: инженерия программного обеспечения). Программированием начал заниматься ещё учась в средней школе.</p>
 							<p>Английским языком владею на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке. Хорошо работаю в команде.</p>
 							<p>С некоторыми моими проектами Вы можете ознакомиться ниже.</p>
 						</div>
