--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 					<ul>
 						<li><a href="#skills">Профессиональные навыки</a></li>
 						<li><a href="#projects">Проекты</a></li>
+						<li><a href="#publications">Публикации</a></li>
 						<li><a href="#contact">Контакты</a></li>
 					</ul>
 				</nav>
@@ -313,6 +314,14 @@
 									</div>
 								</div>
 							</div>
+						</div>
+					</div>
+				</section>
+				<section id="publications">
+					<div class="papers">
+						<div class="section-content">
+							<h2>Публикации</h2>
+							<p>Ссылка на Истину: <a href="https://istina.msu.ru/profile/AISkvortsov" target="_blank">https://istina.msu.ru/profile/AISkvortsov</a></p>
 						</div>
 					</div>
 				</section>
