--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<p>Специализируюсь в области разработки на C#/.NET (ASP.NET MVC, ASP.NET WebAPI, ADO.NET, Entity framework CF, LINQ, ASP.NET Core, WinForms), web разработки.</p>
 							<p>В разное время программировал на JavaScript, Python, C++/Qt, C, MATLAB.</p>
 							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием. Также умею работать с Git, знаю основы работы с Docker.</p>
-							<p>Владею основами frontend разработки (HTML, CSS, JavaScript, JQuery, Bootstrap, Less, Webpack, React.js, Redux). Уважаю хорошие UI/UX-решения.</p>
+							<p>Владею основами frontend разработки (HTML, CSS, JavaScript, JQuery, Bootstrap, Less, Webpack, React.js, Redux, Angular). Уважаю хорошие UI/UX-решения.</p>
 							<p>Составляю SQL-запросы различного уровня сложности, умею проектировать архитектуру БД.</p>
 							<p>Работаю со следующими СУБД: MS SQL Server, PostgreSQL, MongoDB.</p>
 							<p>В качестве сред разработки использую MS Visual Studio и IDLE. Также люблю использовать редактор Visual Studio Code.</p>
