--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<div class="papers">
 						<div class="section-content">
 							<h2>Профессиональные навыки</h2>
-							<p>Специализируюсь в области разработки на C#/.NET (ASP.NET MVC, ASP.NET WebAPI, ADO.NET, Entity framework CF, LINQ, ASP.NET Core, WinForms), we разработки.</p>
+							<p>Специализируюсь в области разработки на C#/.NET (ASP.NET MVC, ASP.NET WebAPI, ADO.NET, Entity framework CF, LINQ, ASP.NET Core, WinForms), web разработки.</p>
 							<p>В разное время программировал на JavaScript, Python, C++/Qt, C, MATLAB.</p>
 							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием. Также умею работать с Git, знаю основы работы с Docker.</p>
 							<p>Владею основами frontend разработки (HTML, CSS, JavaScript, JQuery, Bootstrap, React.js, Redux, Angular). Уважаю хорошие UI/UX-решения.</p>
