--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 						<div class="section-content">
 							<h2>Профессиональные навыки</h2>
 							<p>Специализируюсь в области разработки на C#/.NET (ASP.NET MVC, ASP.NET WebAPI, ADO.NET, Entity framework CF, LINQ, ASP.NET Core, WinForms), web разработки.</p>
-							<p>В разное время программировал на JavaScript, Python, C++/Qt, C, MATLAB.</p>
+							<p>В разное время программировал на PHP, Python, C++/Qt, C, MATLAB.</p>
 							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием. Также умею работать с Git, знаю основы работы с Docker.</p>
-							<p>Владею основами frontend разработки (HTML, CSS, JavaScript, JQuery, Bootstrap, React.js, Redux, Angular). Уважаю хорошие UI/UX-решения.</p>
+							<p>Владею основами frontend разработки (HTML, CSS, JavaScript, JQuery, Bootstrap, React.js). Уважаю хорошие UI/UX-решения.</p>
 							<p>Составляю SQL-запросы различного уровня сложности, умею проектировать архитектуру БД.</p>
 							<p>Работаю со следующими СУБД: MS SQL Server, PostgreSQL, MongoDB.</p>
 							<p>В качестве сред разработки использую MS Visual Studio. Также люблю использовать редактор Visual Studio Code.</p>
